--- a/index.html
+++ b/index.html
@@ -1,32 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
-    <link rel="stylesheet" href="./style.css">
-    <!-- <link rel="icon" href="./img/favicon.ico"> -->
-</head>
-<body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>My_Resume</title>
+    <meta name="author" content="Fly Nerd" />
+    <!-- <link rel="icon" href="./img/favicon.ico" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+
+  <body>
     <header>
-        <img src="./img/free-images.jpg" class="avatar">
-        <h1>Nguyen Thi Thu Thuyen</h1>
-        <div>
-            <span >
-                <a href="">
-                    <i class="fa-solid fa-envelope" class="icon-contact"></i>
-                </a>
-                
-            </span>
-        </div>
+      <div>
+        <img src="./img/IMG_1270.jpg" />
+      </div>
+      <h1 class="name-lable">Nguyễn Thị Thu Thuyên</h1>
+      <h2>SOFTWARE DEVELOPER</h2>
+      <p>
+        Greetings! My name is Nguyen Thi Thu Thuyen, and I am actively seeking a
+        Web Backend Development position within a dynamic and challenging work
+        environment. I possess an open-minded attitude, a strong eagerness to
+        learn, a keen interest in gaining valuable experience, and a dedicated
+        commitment to contribute to the growth of the company.
+      </p>
+      <div>
+        <a
+          href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQXjLXmTgPlrVJSqXWrXgfvQFMjHwQwjrCKjgSmvrDFMknvjVMhzdtQfhwqxfnFrNfgrL"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="fa-regular fa-envelope fa-xl" style="color: #006600"></i>
+          thuyennguyen020517@gmail.com
+        </a>
+        <a href="https://www.facebook.com/nttthuyenn" target="_blank">
+          <i
+            class="fa-brands fa-square-facebook fa-xl"
+            style="color: #006600"
+          ></i>
+          https://www.facebook.com/nttthuyenn
+        </a>
+      </div>
+      <div>
+        <a href="https://github.com/thuyennguyen020517" target="_blank">
+          <i class="fa-brands fa-github fa-xl" style="color: #006600"></i>
+          https://github.com/thuyennguyen020517
+        </a>
+      </div>
     </header>
-
     <main>
-
+      <div>
+        <h2>WORK EXPERIENCE</h2>
+        <hr />
+        <section>
+          <i
+            class="fa-solid fa-graduation-cap fa-lg"
+            style="color: #74c0fc"
+          ></i>
+          <b>DA NANG UNIVERSITY OF SCIENE AND TECHNOLOGY // 2020 - present</b>
+          <div>
+            <b>Major: Software Engeering</b>
+          </div>
+          <div>4th years Software Engineering student</div>
+          <div>GPA: 3.29/4 (present)</div>
+          <div>Expected to graduate in 7/2024</div>
+        </section>
+      </div>
+      <div>
+        <h2>SKILLS</h2>
+        <hr />
+        <section>
+          <p>CSS</p>
+          <div class="skill-bar">
+            <div class="skill-level" style="width: 60%"></div>
+          </div>
+        </section>
+      </div>
+      <div>
+        <h2>Projects</h2>
+        <hr />
+        <section></section>
+      </div>
     </main>
-
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
