--- a/index.html
+++ b/index.html
@@ -18,18 +18,12 @@
 
   <body>
     <header>
+      <div class="line-header"></div>
       <div>
         <img src="./img/IMG_1270.jpg" />
       </div>
-      <h1 class="name-lable">Nguyễn Thị Thu Thuyên</h1>
+      <h1 class="name-lable">Nguyen Thi Thu Thuyen</h1>
       <h2>SOFTWARE DEVELOPER</h2>
-      <p>
-        Greetings! My name is Nguyen Thi Thu Thuyen, and I am actively seeking a
-        Web Backend Development position within a dynamic and challenging work
-        environment. I possess an open-minded attitude, a strong eagerness to
-        learn, a keen interest in gaining valuable experience, and a dedicated
-        commitment to contribute to the growth of the company.
-      </p>
       <div>
         <a
           href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQXjLXmTgPlrVJSqXWrXgfvQFMjHwQwjrCKjgSmvrDFMknvjVMhzdtQfhwqxfnFrNfgrL"
@@ -37,55 +31,128 @@
           rel="noopener noreferrer"
         >
           <i class="fa-regular fa-envelope fa-xl" style="color: #006600"></i>
-          thuyennguyen020517@gmail.com
         </a>
         <a href="https://www.facebook.com/nttthuyenn" target="_blank">
           <i
             class="fa-brands fa-square-facebook fa-xl"
             style="color: #006600"
           ></i>
-          https://www.facebook.com/nttthuyenn
         </a>
-      </div>
-      <div>
         <a href="https://github.com/thuyennguyen020517" target="_blank">
           <i class="fa-brands fa-github fa-xl" style="color: #006600"></i>
-          https://github.com/thuyennguyen020517
         </a>
       </div>
+      
     </header>
     <main>
-      <div>
-        <h2>WORK EXPERIENCE</h2>
-        <hr />
-        <section>
-          <i
-            class="fa-solid fa-graduation-cap fa-lg"
-            style="color: #74c0fc"
-          ></i>
-          <b>DA NANG UNIVERSITY OF SCIENE AND TECHNOLOGY // 2020 - present</b>
-          <div>
-            <b>Major: Software Engeering</b>
+      <div class="frame">
+        <div class="container">
+          <div class="column-left">
+            <h2>ABOUT ME</h2>
+            <p class="">
+              Greetings! My name is Nguyen Thi Thu Thuyen, and I am actively seeking a
+              Web Development position within a dynamic and challenging work
+              environment. I possess an open-minded attitude, a strong eagerness to
+              learn, a keen interest in gaining valuable experience, and a dedicated
+              commitment to contribute to the growth of the company.
+            </p>
           </div>
-          <div>4th years Software Engineering student</div>
-          <div>GPA: 3.29/4 (present)</div>
-          <div>Expected to graduate in 7/2024</div>
-        </section>
+          <div class="">
+            <h2>CONTACT INFORMATION</h2>
+            <div class="column-right">
+              <div class="contact">
+                <li>Email:</li>
+                <li>Github:</li>
+                <li>Phone:</li>
+                <li>Date of birth:</li>
+                <li>Address:</li>
+              </div>
+              <div>
+                <div>thuyennguyen020517@gmail.com</div>
+                <div>https://github.com/thuyennguyen020517</div>
+                <div>+84 372545069</div>
+                <div>17-05-2002</div>
+                <div>Hoa Khanh Bac, Lien Chieu, Da Nang</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div>
+
+      <h2 class="lable-subject">WORK EXPERIENCE</h2>
+      <div class="row">
+        <div class="col-name">
+          <b>BOOKING HOTEL SYSTEM</b>
+          <div>(10/2023 - 12/2023)</div>
+        </div>
+        <div class="col-detail">
+          <div><b>Number of member:</b>5</div>
+          <div><b>Technologies:</b> Java Spring-Boot, React, React Native</div>
+          <div><b>Functional Description:</b></div>
+          <div class="description">
+            <li>You can booking hotel in my system</li>
+            <li>Online booking: my system allows users to conveniently book accommodation online.</li>
+            <li>Paying bills via VnPay is fast and convenient.</li>
+            <li>Allows hoteliers to list their hotels on our system for bookings.</li>
+            <li>Allows admins to manage facilities and users easily.</li>
+            <li>Hoteliers will receive payments from their hotel bookings</li>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-name">
+          <b>LAPTOP STORE</b>
+          <div>(01/2023 - 5/2023)</div>
+        </div>
+        <div class="col-detail">
+          <div><b>Number of member:</b> individual</div>
+          <div><b>Technologies:</b> Python, Django</div>
+          <div><b>Functional Description:</b></div>
+          <div class="description">
+            <li>You can buy a laptop</li>
+            <li>Post laptop information, photos, prices</li>
+            <li>Manage laptops and photos</li>
+            <li>Manage suppliers</li>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-name">
+          <b>LAPTOP STORE</b>
+          <div>(01/2023 - 5/2023)</div>
+        </div>
+        <div class="col-detail">
+          <div><b>Number of member:</b> individual</div>
+          <div><b>Technologies:</b> Python, Django</div>
+          <div><b>Functional Description:</b></div>
+          <div class="description">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </div>
+        </div>
+      </div>
+
+      <h2 class="lable-subject">SKILLS</h2>
+      <div class="frame">
         <h2>SKILLS</h2>
-        <hr />
-        <section>
-          <p>CSS</p>
-          <div class="skill-bar">
-            <div class="skill-level" style="width: 60%"></div>
-          </div>
-        </section>
+        
       </div>
-      <div>
-        <h2>Projects</h2>
-        <hr />
-        <section></section>
+      <div class="frame">
+        <h2>EDUCATION</h2>
+        <section>
+          <div>
+            <i class="fa-solid fa-graduation-cap fa-lg" style="color: #74c0fc"></i>
+            <b>DA NANG UNIVERSITY OF SCIENE AND TECHNOLOGY // 2020 - present</b>
+            <div>
+              <b>Major: Software Engeering</b>
+            </div>
+            <div>4th years Software Engineering student</div>
+            <div>GPA: 3.29/4 (present)</div>
+            <div>Expected to graduate in 7/2024</div>
+            </div>
+        </section>
       </div>
     </main>
     <footer></footer>
