--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-
+  
   <body>
     <header id="header">
       <nav class="navbar">
@@ -31,14 +31,16 @@
           <li class="nav-item">
             <a class="nav-link" href="#education">Education</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">CONTACT</a>
+          </li>
         </ul>
       </nav>
       <div>
         <img src="./img/IMG_1270.jpg" />
       </div>
-      <h1>Nguyen Thi Thu Thuyen</h1>
+      <h1>Hi, I'm Nguyen Thi Thu Thuyen</h1>
       <h2>SOFTWARE DEVELOPER</h2>
-      
     </header>
     <div class="icon">
       <a
@@ -170,7 +172,6 @@
           </div>
         </div>
       </div>
-
       <div id="skill"></div>
       <h2 class="lable-subject" >SKILLS</h2>
       <div class="frame">
@@ -211,6 +212,22 @@
             <div>Expected to graduate in 7/2024</div>
           </div>
         </section>
+      </div>
+
+      <div id="contact"></div>
+      <div class="contact-after">
+        <div class="label">Get In Touch</div>
+        <h2 class="label-contact">Contact Me </h2>
+        <div class="email-add">
+          <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQXjLXmTgPlrVJSqXWrXgfvQFMjHwQwjrCKjgSmvrDFMknvjVMhzdtQfhwqxfnFrNfgrL" target="_blank" >
+            <i class="fa-solid fa-envelope"></i>
+            thuyennguyen020517@gmail.com
+          </a>
+          <a href="https://www.facebook.com/nttthuyenn" target="_blank" >
+            <i class="fa-brands fa-square-facebook icon-link"></i>
+            https://www.facebook.com/nttthuyenn
+          </a>
+        </div>
       </div>
     </main>
     <footer>
