--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  
   <body>
     <header id="header">
       <nav class="navbar">
@@ -56,8 +55,11 @@
           style="color: #006600"
         ></i>
       </a>
-      <a href="https://www.linkedin.com/in/nguy%E1%BB%85n-th%E1%BB%8B-thu-thuy%C3%AAn-2420b5275/" target="_blank">
-        <i class="fa-brands fa-linkedin fa-xl" style="color: #006600;"></i>
+      <a
+        href="https://www.linkedin.com/in/nguy%E1%BB%85n-th%E1%BB%8B-thu-thuy%C3%AAn-2420b5275/"
+        target="_blank"
+      >
+        <i class="fa-brands fa-linkedin fa-xl" style="color: #006600"></i>
       </a>
       <a href="https://github.com/thuyennguyen020517" target="_blank">
         <i
@@ -112,7 +114,10 @@
         </div>
         <div class="col-detail">
           <div><b>Number of member: </b>5 (yourself as FE client, admin)</div>
-          <a href="https://github.com/thuyennguyen020517/InnSight.git" target="_blank">
+          <a
+            href="https://github.com/thuyennguyen020517/InnSight.git"
+            target="_blank"
+          >
             <b>Source:</b> https://github.com/thuyennguyen020517/InnSight.git
           </a>
           <div><b>Technologies:</b> Java Spring-Boot, React, React Native</div>
@@ -138,9 +143,16 @@
           <div>(01/2023 - 5/2023)</div>
         </div>
         <div class="col-detail">
-          <div><b>Number of member:</b> 4 (yourself as CRUD brands, laptops feature)</div>
-          <a href="https://github.com/thuyennguyen020517/Python_project.git" target="_blank">
-            <b>Source:</b> https://github.com/thuyennguyen020517/Python_project.git
+          <div>
+            <b>Number of member:</b> 4 (yourself as CRUD brands, laptops
+            feature)
+          </div>
+          <a
+            href="https://github.com/thuyennguyen020517/Python_project.git"
+            target="_blank"
+          >
+            <b>Source:</b>
+            https://github.com/thuyennguyen020517/Python_project.git
           </a>
           <div><b>Technologies:</b> Python, Django</div>
           <div><b>Functional Description:</b></div>
@@ -158,7 +170,10 @@
           <div>10/2022 - 1/2023</div>
         </div>
         <div class="col-detail">
-          <div><b>Number of member:</b>: 3 (yourself as back-end and partly as front-end)</div>
+          <div>
+            <b>Number of member:</b>: 3 (yourself as back-end and partly as
+            front-end)
+          </div>
           <a href="https://github.com/thuyennguyen020517" target="_blank">
             <b>Source:</b> https://github.com/thuyennguyen020517/GrapGiaSu.git
           </a>
@@ -166,26 +181,102 @@
           <div><b>Functional Description:</b></div>
           <div class="description">
             <li>Manage accounts, questions, answers, money</li>
-            <li>If you have a question that can't be answered, post it in our system so people in the community can answer it.</li>
-            <li>Answer the question posted on the forum and claim some money for it. Students will pay to see their answers. 
-              If students do not agree with the answer, students can request a refund.</li>
+            <li>
+              If you have a question that can't be answered, post it in our
+              system so people in the community can answer it.
+            </li>
+            <li>
+              Answer the question posted on the forum and claim some money for
+              it. Students will pay to see their answers. If students do not
+              agree with the answer, students can request a refund.
+            </li>
           </div>
         </div>
       </div>
       <div id="skill"></div>
-      <h2 class="lable-subject" >SKILLS</h2>
+      <h2 class="lable-subject">SKILLS</h2>
       <div class="frame">
         <div class="styled">BACK-END</div>
-        <nav class="item-skill">
-          <li>OOP, MVC, RESTful API</li>
-          <li>C/C++, C#, java, php, python</li>
-        </nav>
+        <div class="row-skill">
+          <div class="skill">
+            <img src="./img/c++.png" alt="" class="icon-skill" />
+            <div class="skill-progress">
+              <div class="progress-bar" style="width: 80%">80%</div>
+            </div>
+          </div>
+          <div class="skill">
+            <img
+              src="./img/c-sharp-c-icon-1822x2048-wuf3ijab.png"
+              alt=""
+              class="icon-skill"
+            />
+            <div class="skill-progress">
+              <div class="progress-bar" style="width: 75%">75%</div>
+            </div>
+          </div>
+        </div>
+        <div class="row-skill">
+          <div class="skill">
+            <img src="./img/java.png" alt="" class="icon-skill" />
+            <div class="skill-progress">
+              <div class="progress-bar" style="width: 50%">50%</div>
+            </div>
+          </div>
+          <div class="skill">
+            <img src="./img/php.png" alt="" class="icon-skill" />
+            <div class="skill-progress">
+              <div class="progress-bar" style="width: 90%">90%</div>
+            </div>
+          </div>
+        </div>
+        <div class="row-skill">
+          <div class="skill">
+            <img src="./img/Python.webp" alt="" class="icon-skill" />
+            <div class="skill-progress">
+              <div class="progress-bar" style="width: 90%">90%</div>
+            </div>
+          </div>
+          <div class="skill">
+            <img src="./img/api.png" alt="" class="icon-skill" />
+            <div class="skill-progress">
+              <div class="progress-bar" style="width: 75%">75%</div>
+            </div>
+          </div>
+        </div>
+
         <div class="styled">FRONT-END</div>
-        <nav class="item-skill">
-          <li>HTML, CSS, JavaScript</li>
-          <li>Boostrap</li>
-          <li>Reactjs, Tailwind, MUI</li>
-        </nav>
+        <div class="row-skill">
+          <div class="skill">
+            <img src="./img/html.png" alt="" class="icon-skill" />
+            <div class="skill-progress">
+              <div class="progress-bar" style="width: 80%">80%</div>
+            </div>
+          </div>
+          <div class="skill">
+            <img src="./img/bootstrap-stack.png" alt="" class="icon-skill" />
+            <div class="skill-progress">
+              <div class="progress-bar" style="width: 50%">50%</div>
+            </div>
+          </div>
+        </div>
+        <div class="row-skill">
+          <div class="skill">
+            <img src="./img/react-3.png" alt="" class="icon-skill" />
+            <div class="skill-progress">
+              <div class="progress-bar" style="width: 85%">85%</div>
+            </div>
+          </div>
+          <div class="skill">
+            <img
+              src="./img/free-vuejs-1175052.webp"
+              alt=""
+              class="icon-skill"
+            />
+            <div class="skill-progress">
+              <div class="progress-bar" style="width: 60%">60%</div>
+            </div>
+          </div>
+        </div>
         <div class="styled">OTHERS</div>
         <nav class="item-skill">
           <li>Good knowledge of OOP, Data structures, Algorithms</li>
@@ -217,13 +308,16 @@
       <div id="contact"></div>
       <div class="contact-after">
         <div class="label">Get In Touch</div>
-        <h2 class="label-contact">Contact Me </h2>
+        <h2 class="label-contact">Contact Me</h2>
         <div class="email-add">
-          <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQXjLXmTgPlrVJSqXWrXgfvQFMjHwQwjrCKjgSmvrDFMknvjVMhzdtQfhwqxfnFrNfgrL" target="_blank" >
+          <a
+            href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHwQXjLXmTgPlrVJSqXWrXgfvQFMjHwQwjrCKjgSmvrDFMknvjVMhzdtQfhwqxfnFrNfgrL"
+            target="_blank"
+          >
             <i class="fa-solid fa-envelope"></i>
             thuyennguyen020517@gmail.com
           </a>
-          <a href="https://www.facebook.com/nttthuyenn" target="_blank" >
+          <a href="https://www.facebook.com/nttthuyenn" target="_blank">
             <i class="fa-brands fa-square-facebook icon-link"></i>
             https://www.facebook.com/nttthuyenn
           </a>
@@ -247,8 +341,11 @@
             style="color: #006600"
           ></i>
         </a>
-        <a href="https://www.linkedin.com/in/nguy%E1%BB%85n-th%E1%BB%8B-thu-thuy%C3%AAn-2420b5275/" target="_blank">
-          <i class="fa-brands fa-linkedin fa-lg" style="color: #006600;"></i>
+        <a
+          href="https://www.linkedin.com/in/nguy%E1%BB%85n-th%E1%BB%8B-thu-thuy%C3%AAn-2420b5275/"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin fa-lg" style="color: #006600"></i>
         </a>
         <a href="https://github.com/thuyennguyen020517" target="_blank">
           <i
